syntax = "proto2";

package mikros.extensions;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/rsfreitas/protoc-gen-mikros-extensions/mikros/extensions;extensions";

extend google.protobuf.ServiceOptions {
  optional MikrosServiceExtensions service_options = 85042;
}

message MikrosServiceExtensions {
  optional HttpAuthorizationExtensions authorization = 1;
}

message HttpAuthorizationExtensions {
  required AuthorizationMode mode = 1;
}

enum AuthorizationMode {
  AUTHORIZATION_MODE_NO_AUTH = 0;
  AUTHORIZATION_MODE_SCOPED = 1;
}

extend google.protobuf.MethodOptions {
  optional MikrosMethodExtensions method_options = 85042;
}

message MikrosMethodExtensions {
  optional HttpMethodExtensions http = 1;
}

message HttpMethodExtensions {
  repeated string header = 1;
  repeated string scope = 2;
}

extend google.protobuf.EnumOptions {
  optional MikrosEnumExtensions enum_options = 85042;
}

message MikrosEnumExtensions {
  optional EnumApiExtensions api = 1;
}

message EnumApiExtensions {
  // Sets that the enum is of bit flag kind, which will provide an API to use
  // its value as bits for uin64 variables.
  optional bool bitflag = 1;
}

extend google.protobuf.EnumValueOptions {
  optional MikrosEnumValueExtensions enum_value_options = 85042;
}

message MikrosEnumValueExtensions {
  optional EnumEntry entry = 1;
}

message EnumEntry {
  optional string name = 1;
}

extend google.protobuf.FieldOptions {
  optional MikrosFieldExtensions field_options = 85042;
}

message MikrosFieldExtensions {
  optional FieldDomainOptions domain = 1;
  optional FieldDatabaseOptions database = 2;
  optional FieldInboundOptions inbound = 3;
  optional FieldOutboundOptions outbound = 4;
  optional FieldValidateOptions validate = 5;
}

message FieldDomainOptions {
  optional string name = 1;
  optional bool allow_empty = 2;
  repeated FieldDomainStructTag struct_tag = 3;
}

message FieldDomainStructTag {
  required string name = 1;
  required string value = 2;
}

message FieldDatabaseOptions {
  optional string name = 1;
  optional bool allow_empty = 2;
}

message FieldInboundOptions {
  optional string name = 1;
}

message FieldOutboundOptions {
  optional string name = 1;
  optional bool hide = 2;
  optional OutboundBitflagField bitflag = 3;
  optional bool allow_empty = 4;
  repeated FieldDomainStructTag struct_tag = 5;
}

message OutboundBitflagField {
  // Values must point to a valid enum name which holds all the values that the
  // bitflag represents.
  required string values = 1;

  // Sets an optional prefix string that is present in all values that represents
  // the bitflag.
  required string prefix = 2;
}

message FieldValidateOptions {
  optional FieldValidatorRule rule = 1;
  repeated string rule_args = 2;
  optional string custom_rule = 3;
  optional bool required = 4;
  optional int32 min = 5;
  optional int32 max = 6;
  optional int32 max_length = 7;
  optional bool dive = 8;
  optional string required_if = 9;
  optional string required_if_not = 10;
  optional string required_with = 11;
  optional string required_without = 12;
  optional string required_all = 13;
  optional string required_any = 14;
  optional string error_message = 15;
}

enum FieldValidatorRule {
  FIELD_VALIDATOR_RULE_UNSPECIFIED = 0;
  FIELD_VALIDATOR_RULE_REGEX = 1;
  FIELD_VALIDATOR_RULE_CUSTOM = 2;
}

extend google.protobuf.MessageOptions {
  optional MikrosMessageExtensions message_options = 85042;
}

message MikrosMessageExtensions {
  optional MessageDomainExpansionOptions domain = 1;
  optional MessageWireExpansionOptions wire = 2;
  optional MessageInboundOptions inbound = 3;
  optional MessageOutboundOptions outbound = 4;
  optional MessageWireInputOptions wire_input = 5;
}

message MessageDomainExpansionOptions {
  optional bool dont_export = 1;
  optional NamingMode naming_mode = 2;
}

message MessageWireExpansionOptions {
  repeated WireCodeExpansion custom_code = 1;
}

message WireCodeExpansion {
  required string signature = 1;
  required string body  = 2;
  repeated WireCodeExpansionImport import = 3;
}

message WireCodeExpansionImport {
  optional string alias = 1;
  required string name = 2;
}

message MessageInboundOptions {
  optional NamingMode naming_mode = 1;
}

message MessageOutboundOptions {
  optional bool export = 1;
  optional NamingMode naming_mode = 2;
}

message MessageWireInputOptions {
  optional bool export = 1;
}

enum NamingMode {
  NAMING_MODE_SNAKE_CASE = 0;
  NAMING_MODE_CAMEL_CASE = 1;
}